fix: powermock jdk17