@@ -135,5 +135,15 @@ project.tasks.named("processResources") {
   duplicatesStrategy = 'include'
 }
 
+test {
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+    '--add-opens=java.base/java.util=ALL-UNNAMED',
+    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+    '--add-opens=java.base/java.nio.file=ALL-UNNAMED',
+    '--add-opens=java.base/java.io=ALL-UNNAMED',
+    '--add-opens=java.base/sun.nio.fs=ALL-UNNAMED'
+}
+
+
 compileJava.dependsOn 'generateProto', 'spotlessCheck'
 assemble.dependsOn serverStartScripts
